* checkstyle configuration and execution still not working.... * thread safety in unit tests now. pom says have 100 threads running.... * thread safety - no more 'shared copies' of xpath instances. * checkstyle recommendations for naming/spacing/etc